--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ p  {
 }
 </style>
 <h3>::Gaganzo's::<br><br><br>Aint no surviv'n when <i>texting an' Drivin</i></h3>
-<p></p>
+<p>This is a service-school-project my group and I are working on.<br>
+Our goal is to at least lessen texting and driving accidents.<br>
+We will start and end at GBHS.<br></p>
 </body>
 </html>
