--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ body{
     width: 250%;
 }
 h3 {
-    color: maroon;
+    color: red;
     font-family: verdana;
     font-size: 160%;
 }
 p  {
-    color: black;
+    color: maroon;
     font-family: courier;
     font-size: 100%;
 }
