--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@ p  {
 <p>This is a service-school-project my group and I are working on.<br>
 Our goal is to at least lessen texting and driving accidents.<br>
 We will start and end at GBHS.<br></p>
+<h1>Our Driving/Racing Simulator is:</h1>
+<a href="http://www.codeskulptor.org/#user43_pSKNJiJcgY_3.py">Here!</a>
+
 </body>
 </html>
