--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@ body{
     background-repeat: no-repeat;
 }
 h3 {
-    color: red;
+    color: dodgerblue;
     font-family: verdana;
     font-size: 160%;
 }
 p  {
-    color: maroon;
+    color: blue;
     font-family: courier;
     font-size: 100%;
 }
