--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@ h3 {
     font-size: 160%;
 }
 p  {
-    color: blue;
+    color: dodgerblue;
     font-family: courier;
     font-size: 100%;
+}
+h1 {
+    color: dodgerblue;
+    font-family: verdana;
+    font-size: 160%;
 }
 </style>
 <h3>::Gaganzo's::<br><br><br>Aint no surviv'n when <i>texting an' Drivin</i></h3>
 <p>This is a service-school-project my group and I are working on.<br>
 Our goal is to at least lessen texting and driving accidents.<br>
 We will start and end at GBHS.<br></p>
-<h1>Our Driving/Racing Simulator is:</h1>
+<h1>Our Driving/Racing Simulator is:
 <a href="http://www.codeskulptor.org/#user43_pSKNJiJcgY_3.py">Here!</a>
+</h1>
 
 </body>
 </html>
