--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <style>
 body{
     
-    background-image: url("Crash2" style="width:150%;height:150%;");
+    background-image: url("Crash2");
     background-repeat: no-repeat;
+    background-size: width:150% height:150%;
 }
 h3 {
     color: dodgerblue;
