--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
 body{
     
-    background-image: url("Crash2");
+    background-image: url("Crash2.jpg");
     background-repeat: no-repeat;
     background-size: width:150% height:150%;
 }
