--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ body{
     background-image: url("Crash2.jpg");
     background-repeat: no-repeat;
     background-size: width:350% height:350%;
+    background-position: center;
 }
 h3 {
     color: dodgerblue;
