--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body{
     
     background-image: url("Crash2.jpg");
     background-repeat: no-repeat;
-    background-size: width:350% height:350%;
+    background-size: cover;
     background-position: center;
 }
 h3 {
