--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body{
     background-image: url("Crash2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: bottom center;
 }
 h3 {
     color: dodgerblue;
